# practice_planner

./: .gitignore  Cargo.toml  README.md  index-1f4b036fad7eca73.js  index-1f4b036fad7eca73_bg.wasm  index-219b3f7ed64043fe.js  index-219b3f7ed64043fe_bg.wasm  index-246de3283baf5c1c.js  index-246de3283baf5c1c_bg.wasm  index-3aff3230e226cf50.js  index-3aff3230e226cf50_bg.wasm  index-42df15be77f769d3.js  index-42df15be77f769d3_bg.wasm  index-48d4d98faf67845a.js  index-48d4d98faf67845a_bg.wasm  index-4d3d01f8a45e04a8.js  index-4d3d01f8a45e04a8_bg.wasm  index-5707bb976ad0ef53.js  index-5707bb976ad0ef53_bg.wasm  index-5c8b72cf8c25f3ea.js  index-5c8b72cf8c25f3ea_bg.wasm  index-5ee840858c4b118d.js  index-5ee840858c4b118d_bg.wasm  index-5f92745b68dd2f4f.js  index-5f92745b68dd2f4f_bg.wasm  index-5fc59b4684b54daf.js  index-5fc59b4684b54daf_bg.wasm  index-5fe86db828feb6c.js  index-5fe86db828feb6c_bg.wasm  index-61f25574108ca596.js  index-61f25574108ca596_bg.wasm  index-6c7317e3cd874680.js  index-6c7317e3cd874680_bg.wasm  index-74a2a7b5eec8814f.js  index-74a2a7b5eec8814f_bg.wasm  index-7532eb90ccad1e3c.js  index-7532eb90ccad1e3c_bg.wasm  index-7d1f62612f8b1912.js  index-7d1f62612f8b1912_bg.wasm  index-7d8ee51231a8cce3.js  (+59 more)
.github/workflows/: publish.yaml
ppcli/: Cargo.toml
ppcli/src/: main.rs
pplib/: Cargo.toml
pplib/src/: constants.rs  lib.rs
snippets/webapp-9efd290294e319f9/assets/js/: tablature.js
src/: main.rs
webapp/: Cargo.toml  Trunk.toml  build.rs  index.html  main.js  package-lock.json  package.json
webapp/assets/: style.scss
webapp/assets/js/: tablature.js  vextab.js
webapp/src/: main.rs  play.rs
webapp/src/bindings/: mod.rs  tablature.rs
webapp/src/components/: audio_player.rs  fm_osc.rs  mod.rs  modal.rs  tabs.rs
