[package]
name = "practice_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde", "wasmbind", "js-sys"] }
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.4"
lazy_static = "1.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.11", features = ["chrono"] }
text_io = "0.1"
thiserror = "1.0"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
