[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde", "wasmbind", "js-sys"] }
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.4"
lazy_static = "1.2"
log = "0.4.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.11", features = ["chrono"] }
text_io = "0.1"
thiserror = "1.0"
wasm-logger = "0.2.0"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
