[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
pplib = { path = "../pplib" }

anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde", "wasmbind", "js-sys"] }
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.4"
hhmmss = "0.1.0"
lazy_static = "1.2"
log = "0.4.14"
pulldown-cmark = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = { version = "1.11", features = ["chrono"] }
text_io = "0.1"
thiserror = "1.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.19"
yew-agent = "0.1"
# yew = { git = "https://github.com/yewstack/yew.git", branch = "master" }
# yew-agent = { git = "https://github.com/yewstack/yew.git", branch = "master" }
# yewdux = { git = "https://github.com/intendednull/yewdux.git", branch = "master" }
# yewdux = "0.6.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "Document",
    "DocumentFragment",
    "Element",
    "Node",
    "Window",
    "HtmlAudioElement",
    "HtmlCollection",
    "HtmlOptionElement",
]
